--- a/pom.xml
+++ b/pom.xml
@@ -60,4 +60,15 @@
             </plugins>
         </pluginManagement>
     </build>
+
+    <dependencies>
+    <!-- https://mvnrepository.com/artifact/junit/junit -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
 </project>
