--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>fi.tuni.tiko.vc</groupId>
-    <artifactId>version-control-generator</artifactId>
+    <artifactId>kalashnikov</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
